eleff-law/app/public/wp-content/themes/elefflawclone/components/footer-contact-form.css
.footer-contact-form {
  padding: 100px 5%;
  background-image: linear-gradient(rgba(51, 51, 51, 0.83), rgba(51, 51, 51, 5)),
    url("../images/lady-justice.jpg");
  background-size: cover;
  background-position: center;
  color: var(--color-white);
}

.footer-contact-form > .heading {
  margin: 0;
  color: inherit;
  text-align: center;
  font-style: italic;
  margin-bottom: 0.5em;
  opacity: 0;
}

.footer-contact-form > .heading.animate {
  animation-name: fade-leftwards;
  animation-duration: 1.5s;
  animation-fill-mode: forwards;
}

.footer-contact-form > .heading > span {
  color: var(--color-primary);
}

.footer-contact-form .required {
  color: var(--color-primary);
}

.footer-contact-form .form-field-group {
  display: flex;
  justify-content: space-between;
  gap: 0.5em;
}

.footer-contact-form .form-field-group > .form-field {
  flex: 1;
}

.footer-contact-form .form-field {
  padding-top: 1em;
}

.footer-contact-form .form-field > input,
.footer-contact-form .form-field > textarea {
  width: 100%;
  border: 1px solid var(--color-white);
  padding: 1em 0.5em;
  margin-top: 1em;
  background-color: var(--bg-color-black-dark2);
  color: var(--color-white);
}

.footer-contact-form .actions {
  width: 100%;
  margin-top: 1em;
  display: flex;
  justify-content: space-between;
  /* display: grid;
  grid-template-columns: 50% 50%; */
  gap: 1em;
}

.footer-contact-form .actions .links-container {
  width: 50%;
}

.footer-contact-form .actions .links > a {
  color: inherit;
  text-decoration: none;
  border-bottom: 2px solid var(--color-primary);
  transition: var(--transition-fade);
}
.footer-contact-form .actions .links > a:hover {
  border-bottom-color: transparent;
}

.footer-contact-form .actions .disclaimer {
  display: none;
  margin-top: 1.5em;
  padding: 2em;
  background-color: var(--color-white);
  color: var(--color-text-p);
  font-size: 0.9em;
  line-height: 1.6em;
  position: relative;
}

.footer-contact-form .actions .disclaimer-checkbox {
  margin-top: 1em;
  display: flex;
  align-items: center;
  gap: 0.4em;
}

.footer-contact-form .actions .disclaimer-checkbox > label > span {
  color: var(--color-primary);
}

.footer-contact-form .actions .disclaimer__button--close {
  position: absolute;
  right: 5px;
  top: 10px;
  border: none;
  background-color: transparent;
  cursor: pointer;
  transition: var(--transition-fade);
}

.footer-contact-form .actions .disclaimer__button--close:hover {
  color: var(--color-text-h);
}

.footer-contact-form .actions > .button--submit {
  width: fit-content;
  height: fit-content;
}

@media screen and (max-width: 900px) {
  .footer-contact-form .actions {
    display: block;
    padding-bottom: 100px;
  }
  .footer-contact-form .actions .links-container {
    width: 100%;
  }
  .footer-contact-form .actions > .button--submit {
    margin-top: 2em;
    float: right;
  }
}

@media screen and (max-width: 768px) {
  .footer-contact-form .form-field-group {
    flex-direction: column;
    gap: 0;
  }
}

@media screen and (max-width: 600px) {
  .footer-contact-form .actions {
    padding-bottom: 0;
  }
  .footer-contact-form .actions > .button--submit {
    float: none;
    width: 100%;
  }
}

